# Study

./: README.md  shell.c
Assembler/: riscv10.asm  riscv11.asm  riscv12.asm  riscv13.asm  riscv14.asm  riscv15.asm  riscv16.asm  riscv17.asm  riscv18.asm  riscv19.asm  riscv2.1.asm  riscv20.asm  riscv21.asm  riscv22.asm  riscv23.asm  riscv24.asm  riscv26.asm  riscv27.asm  riscv28.asm  riscv29.asm  riscv30.asm  riscv31.asm  riscv6.asm  riscv7.asm  riscv8.asm  riscv9.asm
Assembler/task10/: DoubleTrunc.asm
Assembler/task11/: TaylorCos.asm
Assembler/task12/: FRFlags.asm
Assembler/task13/: InputPrompt.asm
Assembler/task14/: StrMacro.asm
Assembler/task16/: VectorOp.asm
Assembler/task17/: LongerLines.asm
Assembler/task19/: SameLast.asm
Assembler/task2/: EvenOdd
Assembler/task20/: UinqSort.asm
Assembler/task21/: UnCSR.asm
Assembler/task22/: SafeInt.asm
Assembler/task23/: PseudoVM.asm
Assembler/task24/: SlantSlope.asm
Assembler/task25/: SemiLune.asm
Assembler/task27/: MultiTasking.asm
Assembler/task29/: UniHandler.asm
Assembler/task3/: SubStr.asm
Assembler/task30/: PerfMeasure.asm
Assembler/task4/: EvenOdd2.asm
Assembler/task5/: NDigits.asm
Assembler/task6/: RecursiveLCM.asm  riscv6.asm
Assembler/task7/: riscv7.asm
Assembler/task9/: CubicEquation.asm
Concurrency pattrens/: fan-in.go
Go/Concurrency pattrens/: Semaphore.go  (+2 more)
brandes-algorithm/: Makefile  README.md  defs.h  graph_tools.cpp  report .docx  solution_mpi.cpp
coursework/: CMakeLists.txt  README.md  adaptive_scan.cpp  corner_scan.cpp  geometry.hpp  lidar_sim.hpp  loaders.hpp  noise_model.hpp  obj_scan.cpp  point_cloud.hpp  primitives.hpp  robot_scan.cpp  scanner.hpp  vec3.hpp  visualize.py
httpserver/: README.md  client.cpp  readme.mb  server.cpp
interpreter/: README.md  main.cpp  readme.md  run_tests.sh
mpi/: README.md  mpi_task1.cpp  mpi_task2.cpp  mpi_task3.cpp  parallel_jacobi.cpp
posts-service/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml
shell/: README.md  readme.md  run_fault_tests.sh  run_tests.sh  run_valgrind.sh  shell.c
test tasks/: README.md
(+77 files in other folders)
